--- a/ElasticAppEar/pom.xml
+++ b/ElasticAppEar/pom.xml
@@ -31,7 +31,9 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-ear-plugin</artifactId>
+                <version>2.3.2</version>
             </plugin>
         </plugins>
 
