--- a/ElasticAppEar/pom.xml
+++ b/ElasticAppEar/pom.xml
@@ -17,4 +17,23 @@
 			<type>war</type>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+            	<artifactId>maven-ear-plugin</artifactId>
+            	<version>2.10.1</version>
+            	<configuration>
+            		<version>7</version>
+            	</configuration>
+            </plugin>		
+		</plugins>
+	</build>
 </project>
