--- a/ElasticAppWeb/pom.xml
+++ b/ElasticAppWeb/pom.xml
@@ -18,7 +18,6 @@
 			<version>1.0</version>
 		</dependency>
 
-
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
@@ -35,7 +34,6 @@
 			<version>2.3.1</version>
 		</dependency>
 
-
 		<!-- Spring -->
 
 		<dependency>
@@ -50,7 +48,19 @@
 			<version>6.0.2</version>
 		</dependency>
 
-		
-
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>			
+		</plugins>
+	</build>
+
 </project>
